SERVER-21341 PlanYieldPolicy::resetTimer() call should be post-yield